# blzbak

./: .dockerignore  .gitignore  DAEMON_BUILD_SUMMARY.md  DOCKER.md  Dockerfile  INSTALLER_BUILD_SUMMARY.md  daemon.config  daemon.config.docker  daemon.config.example  docker-compose.yml  pyproject.toml
blzbak/: __init__.py  __main__.py  backup.py  cli.py  client.py  config.py  cron.py  ignore.py  models.py  protocol.py  rsync.py
blzbak/commands/: __init__.py  backup_cmd.py  cron_cmd.py  restore_cmd.py  set_cmd.py  test_cmd.py
blzbak/daemon/: README.md  __init__.py  cli.py  config.py  handler.py  server.py  storage.py
installer/: QUICKSTART.md  README.md  __init__.py  blzbak-installer.desktop  create_package.py  file_ops.py  installer_gui.py  requirements.txt  run_installer.py  run_installer.sh  system_ops.py
notes/: AI Build Notes.txt  blzbak daeomon AI chat - daemon instructions at end.txt  dockerization AI chat  - additional - 2.txt  dockerization AI chat  - additional.txt  dockerization AI chat.txt
tests/: __init__.py  test_config.py  test_cron.py  test_daemon.py  test_models.py
