[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blzbak"
version = "0.1.0"
description = "Automated backup system"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "pyyaml>=6.0",
    "pathspec>=0.11",
]

[project.scripts]
blzbak = "blzbak.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blzbak*"]
